--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "php": ">=7.1",
         "symfony/console": "~5.0",
         "ldl-framework/file-finder": "^0.0.1",
-        "symfony/string": "^5.1"
+        "symfony/string": "^5.1",
+        "ext-json": "*"
     },
     "autoload": {
         "psr-4": {
