--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "symfony/console": "~5.0",
         "ldl-framework/file-finder": "^0.0.1",
         "symfony/string": "^5.1",
-        "ext-json": "*"
+        "ext-json": "*",
+        "ext-posix": "*"
     },
     "autoload": {
         "psr-4": {
