--- a/example/Application/Admin/.env
+++ b/example/Application/Admin/.env
@@ -1,3 +1,6 @@
-#!--LDL_ENV_BUILDER_CONFIG DEPTH=2, PREFIX=ADMIN, UPPERCASE=true, COMMENTS=true, SYNTAX_ERROR=false
-APP_ADMIN_URL=http://localhost:8080
-MAINTENANCE_MODE=0
+!LDL-ENV COMPILER={"varNameToUpperCase": true}
+App_Admin_URL=(string)http://localhost:8080\r\n
+MAINTENANCE_MODE=(int)0
+
+!LDL-ENV PARSER={"ignore": true}
+THIS_VARIABLE_MUST_NOT_BE_VISIBLE=Administration
